--- a/natural_gas_analysis.ipynb
+++ b/natural_gas_analysis.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "dataset = pd.read_csv('Nat_Gas.csv')\n",
+    "dataset = pd.read_csv('Data/Nat_Gas.csv')\n",
     "dataset.head()"
    ]
   },
@@ -712,7 +712,7 @@
     "        \n",
     "        # Initial cost of purchase -> fixed costs\n",
     "        fixed_costs = (units * df.loc[purchase_date, 'Prices']) + (transport_cost_one_way * 2)\n",
-    "        # Variable costs based on number of units purchased\n",
+    "        # Variable costs based on the number of units purchased\n",
     "        total_cost_for_storage = (storage_cost_per_month_1m_units / 1000000) * units * number_of_months\n",
     "        inj_withdr_cost = (inj_withdr_cost_per_1mil_units / 1000000) * units\n",
     "        \n",
