format the code

--- a/natural_gas_analysis.ipynb
+++ b/natural_gas_analysis.ipynb
@@ -65,22 +65,23 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from datetime import datetime\n",
-    "import plotly.graph_objects as go\n",
+    "from math import sqrt\n",
+    "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "import scipy.stats as stats\n",
+    "import statsmodels.api as sm\n",
     "from pmdarima.arima import auto_arima\n",
     "from pmdarima.arima.utils import ndiffs\n",
-    "from statsmodels.tsa.stattools import adfuller\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "import statsmodels.api as sm\n",
-    "from math import sqrt\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import scipy.stats as stats\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing"
+    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
@@ -93,7 +94,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "dataset = pd.read_csv('Data/Nat_Gas.csv')\n",
+    "dataset = pd.read_csv(\"Data/Nat_Gas.csv\")\n",
     "dataset.head()"
    ]
   },
@@ -120,7 +121,7 @@
    "outputs": [],
    "source": [
     "# Convert the 'Dates' column to a datetime type\n",
-    "dataset['Dates'] = pd.to_datetime(dataset['Dates'], format='%m/%d/%y')"
+    "dataset[\"Dates\"] = pd.to_datetime(dataset[\"Dates\"], format=\"%m/%d/%y\")"
    ]
   },
   {
@@ -156,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Set 'Dates' column as index\n",
-    "dataset.set_index('Dates', inplace=True)"
+    "dataset.set_index(\"Dates\", inplace=True)"
    ]
   },
   {
@@ -166,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Since I have time series data I want to visualise them so see if there are any pattern, outliears and also  \n",
+    "# Since I have time series data I want to visualise them so see if there are any pattern, outliears and also\n",
     "# before doing a seasonall decomposing I want to understand whether the seasonality shows multiplicative or additive behavior"
    ]
   },
@@ -197,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ho have an idea of the data I want to see mean and variance of data to understand if the data is stationary. \n",
+    "# Ho have an idea of the data I want to see mean and variance of data to understand if the data is stationary.\n",
     "# Later I will run the Augmented Dickey-Fuller test to verify if the data are stationary"
    ]
   },
@@ -219,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I want to know more about the data so I'm going to display basic statistics. \n",
+    "# I want to know more about the data so I'm going to display basic statistics.\n",
     "dataset.describe()"
    ]
   },
@@ -250,25 +251,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decomposed_gas_price = seasonal_decompose(\n",
-    "    dataset \n",
-    "    , period=13\n",
-    "    , model='additive'\n",
-    ")\n",
+    "decomposed_gas_price = seasonal_decompose(dataset, period=13, model=\"additive\")\n",
     "\n",
     "fig, ax = plt.subplots(4, 1, figsize=(16, 10))\n",
     "ax[0].plot(decomposed_gas_price.observed)\n",
-    "ax[0].set_ylabel('Observed')\n",
-    "ax[0].set_title('Decomposition for Multiplicative Model')\n",
+    "ax[0].set_ylabel(\"Observed\")\n",
+    "ax[0].set_title(\"Decomposition for Multiplicative Model\")\n",
     "\n",
     "ax[1].plot(decomposed_gas_price.trend)\n",
-    "ax[1].set_ylabel('Trend')\n",
+    "ax[1].set_ylabel(\"Trend\")\n",
     "\n",
-    "ax[2].plot(decomposed_gas_price.seasonal, label='Seasonal')\n",
-    "ax[2].set_ylabel('Seasonal')\n",
+    "ax[2].plot(decomposed_gas_price.seasonal, label=\"Seasonal\")\n",
+    "ax[2].set_ylabel(\"Seasonal\")\n",
     "\n",
-    "ax[3].plot(decomposed_gas_price.resid, label='Residual')\n",
-    "ax[3].set_ylabel('Residual')\n",
+    "ax[3].plot(decomposed_gas_price.resid, label=\"Residual\")\n",
+    "ax[3].set_ylabel(\"Residual\")\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
@@ -285,21 +282,21 @@
     "def ADF_test(data):\n",
     "    \"\"\"\n",
     "    Perform Augmented Dickey-Fuller Test\n",
-    "    The number of considered lags is automatically selected based \n",
+    "    The number of considered lags is automatically selected based\n",
     "    on the Akaike Information Criterion (AIC)\n",
     "    Ho = Null Hypothesis -> The data are not stationary\n",
     "    H1 = Alternate Hypotesis -> The data are stationary\n",
     "    \"\"\"\n",
-    "    result = adfuller(data, autolag='AIC')\n",
-    "    print(f'ADF Statistic:{result[0]}')\n",
-    "    print (f'P-value: {result[1]}')\n",
-    "    print('Critical Values:')\n",
+    "    result = adfuller(data, autolag=\"AIC\")\n",
+    "    print(f\"ADF Statistic:{result[0]}\")\n",
+    "    print(f\"P-value: {result[1]}\")\n",
+    "    print(\"Critical Values:\")\n",
     "    for x, y in result[4].items():\n",
-    "        print(f'{x}:{y}')\n",
+    "        print(f\"{x}:{y}\")\n",
     "    if result[1] > 0.05:\n",
-    "        print('We accept the Null Hypotesis. Data are not stationary!')\n",
+    "        print(\"We accept the Null Hypotesis. Data are not stationary!\")\n",
     "    else:\n",
-    "        print('We accept the Alternate Hypotesis. Data are Stationary!')"
+    "        print(\"We accept the Alternate Hypotesis. Data are Stationary!\")"
    ]
   },
   {
@@ -320,8 +317,8 @@
    "outputs": [],
    "source": [
     "# Find the optimal number of differencing\n",
-    "number_of_diff = ndiffs(dataset, test = 'adf')\n",
-    "print(f'Number of differencing: {number_of_diff}')"
+    "number_of_diff = ndiffs(dataset, test=\"adf\")\n",
+    "print(f\"Number of differencing: {number_of_diff}\")"
    ]
   },
   {
@@ -362,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(2,1, figsize=(12,8))\n",
+    "fig, ax = plt.subplots(2, 1, figsize=(12, 8))\n",
     "plot_acf(first_order_diff, zero=False, ax=ax[0])\n",
     "plot_pacf(first_order_diff, zero=False, ax=ax[1])\n",
     "plt.show()"
@@ -375,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#first_order_diff\n",
+    "# first_order_diff\n",
     "split = int(len(dataset) * 0.93)\n",
     "train_data = dataset.iloc[:split]\n",
     "test_data = dataset.iloc[split:]"
@@ -392,14 +389,20 @@
     "# Start_q-> the starting value of q, the order of the moving-average (“MA”) model.\n",
     "# m -> the number of periods in each season\n",
     "model = auto_arima(\n",
-    "    train_data, start_p=1,\n",
-    "    start_q=1, max_p=12, \n",
-    "    max_q=12, m=12,\n",
-    "    start_P=0, seasonal=True,\n",
-    "    #d=1, D=1,\n",
-    "    trace=True, error_action='ignore',\n",
-    "    test='adf', information_criterion='aic',\n",
-    "    suppress_warnings=True\n",
+    "    train_data,\n",
+    "    start_p=1,\n",
+    "    start_q=1,\n",
+    "    max_p=12,\n",
+    "    max_q=12,\n",
+    "    m=12,\n",
+    "    start_P=0,\n",
+    "    seasonal=True,\n",
+    "    # d=1, D=1,\n",
+    "    trace=True,\n",
+    "    error_action=\"ignore\",\n",
+    "    test=\"adf\",\n",
+    "    information_criterion=\"aic\",\n",
+    "    suppress_warnings=True,\n",
     ")"
    ]
   },
@@ -420,9 +423,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Residuals to check their normality \n",
+    "# Residuals to check their normality\n",
     "output = model.plot_diagnostics(figsize=(16, 7))\n",
-    "# correlogram tells us that there is no any pattern left in the residuals, so this is just noise\n"
+    "# correlogram tells us that there is no any pattern left in the residuals, so this is just noise"
    ]
   },
   {
@@ -452,7 +455,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auto_arima_prediction = auto_arima_fitted.predict(len(test_data)+12).to_frame(name='Prices')"
+    "auto_arima_prediction = auto_arima_fitted.predict(len(test_data) + 12).to_frame(\n",
+    "    name=\"Prices\"\n",
+    ")"
    ]
   },
   {
@@ -472,8 +477,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auto_arima_rmse = sqrt(mean_squared_error(test_data, auto_arima_prediction.iloc[:len(test_data), :]))\n",
-    "print('RMSE: ', auto_arima_rmse)"
+    "auto_arima_rmse = sqrt(\n",
+    "    mean_squared_error(test_data, auto_arima_prediction.iloc[: len(test_data), :])\n",
+    ")\n",
+    "print(\"RMSE: \", auto_arima_rmse)"
    ]
   },
   {
@@ -486,14 +493,14 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(16, 7))\n",
-    "plt.plot(train_data, c='royalblue')\n",
-    "plt.plot(test_data, c='green', ls='-')\n",
-    "plt.plot(auto_arima_prediction, c='grey', ls='--')\n",
-    "plt.xlabel('Date', size=20)\n",
-    "plt.ylabel('Market Price', size=20)\n",
-    "plt.title('Market Price Prediction by Auto ARIMA', size=20)\n",
-    "plt.legend(['Train Data', 'Observed Data', 'Predicted Data'])\n",
-    "plt.grid(linestyle='--', c='grey')"
+    "plt.plot(train_data, c=\"royalblue\")\n",
+    "plt.plot(test_data, c=\"green\", ls=\"-\")\n",
+    "plt.plot(auto_arima_prediction, c=\"grey\", ls=\"--\")\n",
+    "plt.xlabel(\"Date\", size=20)\n",
+    "plt.ylabel(\"Market Price\", size=20)\n",
+    "plt.title(\"Market Price Prediction by Auto ARIMA\", size=20)\n",
+    "plt.legend([\"Train Data\", \"Observed Data\", \"Predicted Data\"])\n",
+    "plt.grid(linestyle=\"--\", c=\"grey\")"
    ]
   },
   {
@@ -537,9 +544,13 @@
     "seasonal_periods = 12\n",
     "# Holt-Winter's model with exponential trend\n",
     "hw_1 = ExponentialSmoothing(\n",
-    "    train_data_es, trend='add',\n",
-    "    seasonal='add', seasonal_periods=seasonal_periods,\n",
-    "    damped_trend=False, freq='M').fit()"
+    "    train_data_es,\n",
+    "    trend=\"add\",\n",
+    "    seasonal=\"add\",\n",
+    "    seasonal_periods=seasonal_periods,\n",
+    "    damped_trend=False,\n",
+    "    freq=\"M\",\n",
+    ").fit()"
    ]
   },
   {
@@ -570,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hw_forecast_1 = hw_forecast_1.to_frame(name='Prices')"
+    "hw_forecast_1 = hw_forecast_1.to_frame(name=\"Prices\")"
    ]
   },
   {
@@ -581,14 +592,14 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(16, 7))\n",
-    "plt.plot(train_data_es, c='royalblue')\n",
-    "plt.plot(test_data_es, c='green', ls='-')\n",
-    "plt.plot(hw_forecast_1, c='grey', ls='--')\n",
-    "plt.xlabel('Date', size=20)\n",
-    "plt.ylabel('Market Price', size=20)\n",
+    "plt.plot(train_data_es, c=\"royalblue\")\n",
+    "plt.plot(test_data_es, c=\"green\", ls=\"-\")\n",
+    "plt.plot(hw_forecast_1, c=\"grey\", ls=\"--\")\n",
+    "plt.xlabel(\"Date\", size=20)\n",
+    "plt.ylabel(\"Market Price\", size=20)\n",
     "plt.title(\"Market Price Holt-Winter's Seasonal Smoothing\", size=20)\n",
-    "plt.legend(['Train Data', 'Observed Data', 'Predicted Data'])\n",
-    "plt.grid(linestyle='--', c='grey')"
+    "plt.legend([\"Train Data\", \"Observed Data\", \"Predicted Data\"])\n",
+    "plt.grid(linestyle=\"--\", c=\"grey\")"
    ]
   },
   {
@@ -598,9 +609,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rmse_triple_exp_smoothing = np.sqrt(mean_squared_error(test_data_es, hw_forecast_1.iloc[:-12]))\n",
+    "rmse_triple_exp_smoothing = np.sqrt(\n",
+    "    mean_squared_error(test_data_es, hw_forecast_1.iloc[:-12])\n",
+    ")\n",
     "\n",
-    "print(f'Triple Exponential Smoothing RMSE: {rmse_triple_exp_smoothing}')"
+    "print(f\"Triple Exponential Smoothing RMSE: {rmse_triple_exp_smoothing}\")"
    ]
   },
   {
@@ -610,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([dataset, hw_forecast_1.iloc[len(test_data):, :]])"
+    "df = pd.concat([dataset, hw_forecast_1.iloc[len(test_data) :, :]])"
    ]
   },
   {
@@ -630,9 +643,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = hw_1.params['smoothing_level']\n",
-    "beta = hw_1.params['smoothing_trend']\n",
-    "gamma = hw_1.params['smoothing_seasonal']\n"
+    "alpha = hw_1.params[\"smoothing_level\"]\n",
+    "beta = hw_1.params[\"smoothing_trend\"]\n",
+    "gamma = hw_1.params[\"smoothing_seasonal\"]"
    ]
   },
   {
@@ -651,7 +664,9 @@
    "outputs": [],
    "source": [
     "def forecast_price():\n",
-    "    user_date_input = input(\"Forecast starts from '2024-10-31'.Enter a end month date in 'YYYY-MM-DD' format: \")\n",
+    "    user_date_input = input(\n",
+    "        \"Forecast starts from '2024-10-31'.Enter a end month date in 'YYYY-MM-DD' format: \"\n",
+    "    )\n",
     "    return df.loc[user_date_input, :]"
    ]
   },
@@ -686,8 +701,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pricing_model(*, units=1000000, purchase_date = '2023-06-30', sell_date='2024-01-31', storage_cost_per_month_1m_units = 20000, max_capacity_units = 3000000, inj_withdr_cost_per_1mil_units = 10000, transport_cost_one_way = 1000, pricing_dataframe):\n",
-    "    '''\n",
+    "def pricing_model(\n",
+    "    *,\n",
+    "    units=1000000,\n",
+    "    purchase_date=\"2023-06-30\",\n",
+    "    sell_date=\"2024-01-31\",\n",
+    "    storage_cost_per_month_1m_units=20000,\n",
+    "    max_capacity_units=3000000,\n",
+    "    inj_withdr_cost_per_1mil_units=10000,\n",
+    "    transport_cost_one_way=1000,\n",
+    "    pricing_dataframe\n",
+    "):\n",
+    "    \"\"\"\n",
     "    Input: DataFrame with dates and prices for unit of commodity\n",
     "\n",
     "    Parameters:\n",
@@ -699,43 +724,54 @@
     "    inj_withdr_cost_per_1mil_units: sum of injection and withdrawal cost per 1 million units\n",
     "    transport_cost_one_way: transport cost one way\n",
     "    Output: Value of a contract\n",
-    "    '''\n",
-    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    if units <= max_capacity_units:\n",
-    "        number_of_months = int((datetime.strptime(sell_date, \"%Y-%m-%d\").year - datetime.strptime(purchase_date, \"%Y-%m-%d\").year) * 12 \n",
-    "                               + (datetime.strptime(sell_date, \"%Y-%m-%d\").month - datetime.strptime(purchase_date, \"%Y-%m-%d\").month))\n",
+    "        number_of_months = int(\n",
+    "            (\n",
+    "                datetime.strptime(sell_date, \"%Y-%m-%d\").year\n",
+    "                - datetime.strptime(purchase_date, \"%Y-%m-%d\").year\n",
+    "            )\n",
+    "            * 12\n",
+    "            + (\n",
+    "                datetime.strptime(sell_date, \"%Y-%m-%d\").month\n",
+    "                - datetime.strptime(purchase_date, \"%Y-%m-%d\").month\n",
+    "            )\n",
+    "        )\n",
     "        # Dataset with Pricing\n",
     "        df = pricing_dataframe\n",
-    "        # Total revenue \n",
-    "        total_revenue = units * df.loc[sell_date, 'Prices']\n",
+    "        # Total revenue\n",
+    "        total_revenue = units * df.loc[sell_date, \"Prices\"]\n",
     "        # Total costs based on months\n",
-    "        \n",
+    "\n",
     "        # Initial cost of purchase -> fixed costs\n",
-    "        fixed_costs = (units * df.loc[purchase_date, 'Prices']) + (transport_cost_one_way * 2)\n",
+    "        fixed_costs = (units * df.loc[purchase_date, \"Prices\"]) + (\n",
+    "            transport_cost_one_way * 2\n",
+    "        )\n",
     "        # Variable costs based on the number of units purchased\n",
-    "        total_cost_for_storage = (storage_cost_per_month_1m_units / 1000000) * units * number_of_months\n",
+    "        total_cost_for_storage = (\n",
+    "            (storage_cost_per_month_1m_units / 1000000) * units * number_of_months\n",
+    "        )\n",
     "        inj_withdr_cost = (inj_withdr_cost_per_1mil_units / 1000000) * units\n",
-    "        \n",
-    "        \n",
+    "\n",
     "        variable_cost = total_cost_for_storage + inj_withdr_cost\n",
     "        total_cost = fixed_costs + variable_cost\n",
-    "        \n",
-    "        revenue_loss = {'Revenue': 0.00, 'Loss': 0.00}\n",
-    "        \n",
+    "\n",
+    "        revenue_loss = {\"Revenue\": 0.00, \"Loss\": 0.00}\n",
+    "\n",
     "        if total_revenue > total_cost:\n",
     "            profit = total_revenue - total_cost\n",
-    "            revenue_loss['Revenue'] = profit\n",
+    "            revenue_loss[\"Revenue\"] = profit\n",
     "        elif total_revenue < total_cost:\n",
     "            loss = total_revenue - total_cost\n",
-    "            revenue_loss['Loss'] = loss\n",
+    "            revenue_loss[\"Loss\"] = loss\n",
     "        elif total_revenue == total_cost:\n",
     "            neutral = total_revenue - total_cost\n",
-    "        result = pd.DataFrame(revenue_loss, index=[1]).T.rename(columns={1: '£ Value'})\n",
-    "    \n",
+    "        result = pd.DataFrame(revenue_loss, index=[1]).T.rename(columns={1: \"£ Value\"})\n",
+    "\n",
     "    else:\n",
-    "        result = 'Order is out of capacity!'\n",
-    "    return result\n",
-    "    "
+    "        result = \"Order is out of capacity!\"\n",
+    "    return result"
    ]
   },
   {
