--- a/probability_of_default.ipynb
+++ b/probability_of_default.ipynb
@@ -19,13 +19,14 @@
    "outputs": [],
    "source": [
     "# Importing required modules\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from datetime import datetime\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Load the data\n",
-    "df = pd.read_csv('Data/Loan_Data.csv')"
+    "df = pd.read_csv(\"Data/Loan_Data.csv\")"
    ]
   },
   {
@@ -58,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Data Preprocessing\n",
-    "# Clean and preprocess the data, handling missing values and encoding categorical variables \n",
+    "# Clean and preprocess the data, handling missing values and encoding categorical variables\n",
     "df.info()"
    ]
   },
@@ -70,7 +71,7 @@
    "outputs": [],
    "source": [
     "# Change datatype of customer id column\n",
-    "df['customer_id'] = df['customer_id'].astype('str')"
+    "df[\"customer_id\"] = df[\"customer_id\"].astype(\"str\")"
    ]
   },
   {
@@ -111,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature scaling is used to \n",
+    "# Feature scaling is used to\n",
     "# Standardize or normalize numerical features to ensure that they are on a similar scale\n",
     "# we will going to scale fico_score"
    ]
@@ -123,10 +124,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(['default', 'customer_id'], axis=1)\n",
-    "y = df['default']\n",
+    "X = df.drop([\"default\", \"customer_id\"], axis=1)\n",
+    "y = df[\"default\"]\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -146,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train['fico_score'] = scaler.fit_transform(X_train[['fico_score']].values)\n",
-    "X_test['fico_score'] = scaler.fit_transform(X_test[['fico_score']].values)"
+    "X_train[\"fico_score\"] = scaler.fit_transform(X_train[[\"fico_score\"]].values)\n",
+    "X_test[\"fico_score\"] = scaler.fit_transform(X_test[[\"fico_score\"]].values)"
    ]
   },
   {
@@ -210,9 +213,9 @@
    "source": [
     "# Extract coefficients and intercept\n",
     "coefficients = model.coef_[0]\n",
-    "print('Coefficients: ', coefficients)\n",
+    "print(\"Coefficients: \", coefficients)\n",
     "intercept = model.intercept_[0]\n",
-    "print('Intercept: ', intercept)"
+    "print(\"Intercept: \", intercept)"
    ]
   },
   {
@@ -223,10 +226,12 @@
    "outputs": [],
    "source": [
     "def scaled(score):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Performs max min normalization\n",
-    "    '''\n",
-    "    scaled_point = (score - df['fico_score'].min()) / (df['fico_score'].max() - df['fico_score'].min())\n",
+    "    \"\"\"\n",
+    "    scaled_point = (score - df[\"fico_score\"].min()) / (\n",
+    "        df[\"fico_score\"].max() - df[\"fico_score\"].min()\n",
+    "    )\n",
     "    return scaled_point"
    ]
   },
@@ -239,9 +244,9 @@
    "source": [
     "# Define the logistic function\n",
     "def logistic_function(features):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    This function calculates the probability of default of a loan given the features\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    features[-1] = scaled(features[-1])\n",
     "    # Calculate the linear combination of features and coefficients\n",
     "    linear_combination = np.dot(features, coefficients) + intercept\n",
@@ -256,28 +261,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def expected_loss_on_loan(credit_lines_outstanding, loan_amt_outstanding, total_debt_outstanding, income, years_employed, fico_score, recovery_rate=0.10):\n",
-    "    '''\n",
-    "    Takes in the properties of a loan and output the expected loss (£)\n",
-    "    \n",
+    "def expected_loss_on_loan(\n",
+    "    credit_lines_outstanding,\n",
+    "    loan_amt_outstanding,\n",
+    "    total_debt_outstanding,\n",
+    "    income,\n",
+    "    years_employed,\n",
+    "    fico_score,\n",
+    "    recovery_rate=0.10,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Takes in the properties of a loan and outputs the expected loss (£)\n",
+    "\n",
     "    Parameters:\n",
     "    - credit_lines_outstanding: the number of active credit lines that a borrower has\n",
     "    - loan_amt_outstanding: the total amount of money that a borrower still owes on their outstanding loans\n",
     "    - total_debt_outstanding:  the total debt outstanding of a borrower\n",
     "    - income: borrower's income\n",
-    "    - years_employed: number of years borrower was employed\n",
+    "    - years_employed: number of years the borrower was employed\n",
     "    - fico_score: credit score of borrower\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "    - expected_loss: expected loss (£) in case of default\n",
-    "    '''\n",
-    "    features = [credit_lines_outstanding, loan_amt_outstanding, total_debt_outstanding, income, years_employed, fico_score]\n",
+    "    \"\"\"\n",
+    "    features = [\n",
+    "        credit_lines_outstanding,\n",
+    "        loan_amt_outstanding,\n",
+    "        total_debt_outstanding,\n",
+    "        income,\n",
+    "        years_employed,\n",
+    "        fico_score,\n",
+    "    ]\n",
     "    probability_of_default = logistic_function(features)\n",
     "    expected_loss = round((probability_of_default - recovery_rate) * features[1], 1)\n",
     "    if expected_loss > 0:\n",
     "        expected_loss = expected_loss\n",
     "    if expected_loss <= 0:\n",
-    "        expected_loss = f'We anticipate Probability of Default equal to {round(probability_of_default*100, 0)}% on this loan.'\n",
+    "        expected_loss = f\"We anticipate Probability of Default equal to {round(probability_of_default*100, 0)}% on this loan.\"\n",
     "    return expected_loss"
    ]
   },
